syntax = "proto3";

package rototiller.api;

import "google/protobuf/timestamp.proto";
import "pkg/api/step.proto";

option go_package = "github.com/logsquaredn/rototiller/pkg/api";

message Job {
  string id = 1;
  string owner_id = 2;
  string input_id = 3;
  string output_id = 4;
  string status = 5;
  string error = 6;
  google.protobuf.Timestamp start_time = 7;
  google.protobuf.Timestamp end_time = 8;
  repeated Step steps = 9;
}
